added js functionality to toggle read/unread msgs

--- a/styles/_notifications-container.scss
+++ b/styles/_notifications-container.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
 }
-.notifications-counter {
+.counter-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
