--- a/styles/_msg-container.scss
+++ b/styles/_msg-container.scss
@@ -1,7 +1,8 @@
 .msg-container {
   margin-top: 20px;
-  background-color: rgb(207, 129, 28);
+  background-color: dodgerblue;
   border-radius: 10px;
+  transition: 0.5s all;
 }
 .msg-content {
   display: flex;
@@ -9,4 +10,7 @@
   .msg-img {
     width: 70px;
   }
+}
+.msg-containers {
+  background-color: rgb(217, 177, 177);
 }
