--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ main {
 
 .main-container {
   max-width: 1440px;
-  background-color: rgb(223, 191, 140);
+  background-color: rgb(131, 121, 106);
   height: 80vh;
   margin-left: auto;
   margin-right: auto;
@@ -56,7 +56,7 @@ main {
   align-items: center;
 }
 
-.notifications-counter {
+.counter-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -65,8 +65,9 @@ main {
 
 .msg-container {
   margin-top: 20px;
-  background-color: rgb(207, 129, 28);
+  background-color: dodgerblue;
   border-radius: 10px;
+  transition: 0.5s all;
 }
 
 .msg-content {
@@ -75,4 +76,8 @@ main {
 }
 .msg-content .msg-img {
   width: 70px;
+}
+
+.msg-containers {
+  background-color: rgb(217, 177, 177);
 }/*# sourceMappingURL=style.css.map */
