fixed msg counter function to decrease message count when messages are marked read

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,5 +79,5 @@ main {
 }
 
 .msg-containers {
-  background-color: rgb(217, 177, 177);
+  background-color: tomato;
 }/*# sourceMappingURL=style.css.map */
