--- a/styles/_mainContainer.scss
+++ b/styles/_mainContainer.scss
@@ -1,13 +1,14 @@
-main {
-  height: 90vh;
+body {
+  background-color: hsl(210, 60%, 98%);
 }
 .main-container {
+  padding-top: 1px;
   max-width: 1440px;
-  background-color: rgb(131, 121, 106);
-  height: 80vh;
+  background-color: hsl(0, 0%, 100%);
+  min-height: 93vh;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 80px;
+  margin-top: 15px;
   padding-left: 10px;
   padding-right: 10px;
 }
