--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
 @import "./meyerReset";
 @import "./mainContainer";
 @import "./notifications-container";
