--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
 html {
   box-sizing: border-box;
+  font-family: "Plus Jakarta Sans", Verdana, Tahoma, sans-serif;
 }
 
 *,
@@ -95,6 +96,26 @@ body {
   padding: 20px;
 }
 
+.msg-containers {
+  background-color: hsl(0, 0%, 100%);
+}
+
+.red-dot {
+  background-color: hsl(1, 90%, 64%);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.red-dots {
+  background-color: hsl(0, 0%, 100%);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
 .msg-content {
   display: flex;
   align-items: center;
@@ -104,10 +125,23 @@ body {
   padding-right: 10px;
 }
 
-.msg-containers {
-  background-color: hsl(0, 0%, 100%);
-}
-
 .userName {
   margin-right: 10px;
+  font-family: "Plus Jakarta Sans", Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 800;
+}
+.userName:hover {
+  color: hsl(219, 85%, 26%);
+  cursor: pointer;
+}
+
+.UIS {
+  color: hsl(219, 12%, 42%);
+  margin-right: 10px;
+}
+
+.userMsgTime {
+  color: hsl(219, 12%, 42%);
+  margin-top: 5px;
+  margin-left: 50px;
 }/*# sourceMappingURL=style.css.map */
